# smart-delivery-routing

./: .coverage  .gitattributes  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
data/samples/: generate.py  map.html  orders.csv  vehicles.csv  warehouses.csv
docs/: api.md
src/ecom_logistics/: config.py
src/ecom_logistics/app/: api.py  dependencies.py
src/ecom_logistics/auth/application/: __init__.py  services.py
src/ecom_logistics/auth/infrastructure/: __init__.py  repositories.py
src/ecom_logistics/auth/presentation/: dependencies.py  router.py  schemas.py
src/ecom_logistics/shared/: __init__.py  exceptions.py  validators.py  value_objects.py
src/smart_delivery_routing/: config.py
src/smart_delivery_routing/application/: data_loader.py  delivery_route_use_cases.py  driver_use_cases.py  hub_use_cases.py  kpi.py  order_use_cases.py  parcel_use_cases.py  services.py  shipping_use_cases.py  truck_trip_use_cases.py  truck_use_cases.py  use_cases.py  vehicle_use_cases.py  warehouse_use_cases.py
src/smart_delivery_routing/application/solvers/: nearest_neighbor.py  ortools_solver.py
src/smart_delivery_routing/domain/: models.py  ports.py  repositories.py  validators.py
src/smart_delivery_routing/domain/delivery/: __init__.py  models.py  queries.py  repository.py  validators.py
src/smart_delivery_routing/domain/linehaul/: __init__.py  models.py  queries.py  repository.py  validators.py
src/smart_delivery_routing/domain/notification/: __init__.py  models.py  repository.py
src/smart_delivery_routing/domain/shared/: __init__.py  validators.py  value_objects.py
src/smart_delivery_routing/domain/shipping/: __init__.py  models.py  queries.py  repository.py  validators.py
src/smart_delivery_routing/domain/tracking/: __init__.py  models.py  repository.py
src/smart_delivery_routing/infrastructure/: distance.py  fcm_notification_service.py  firebase.py  haversine.py  job_service.py  locustfile.py  redis_client.py  supabase_client.py  telemetry.py  websocket.py
src/smart_delivery_routing/infrastructure/celery/: __init__.py  tasks.py
src/smart_delivery_routing/infrastructure/osrm/: distance.py  geometry.py
src/smart_delivery_routing/infrastructure/repositories/: supabase_orders.py  supabase_vehicles.py  supabase_warehouses.py
src/smart_delivery_routing/infrastructure/supabase/: auth_service.py  client.py
src/smart_delivery_routing/interface/: api.py  schemas.py  streamlit_app.py  visualizer.py
tests/: conftest.py  factories.py  fakes.py
tests/application/: test_kpi.py  test_nearest_neighbor.py  test_parcel_use_cases.py  test_shipping_use_cases.py  test_truck_trip_use_cases.py
tests/domain/: test_delivery_validators.py  test_linehaul_validators.py  test_shipping_validators.py  test_validators.py
tests/infrastructure/: test_distance.py
tests/interface/: test_api.py
(+54 files in other folders)
