[project]
name = "smart-delivery-routing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "folium>=0.20.0",
    "numpy>=2.4.4",
    "ortools>=9.15.6755",
    "pandas>=3.0.2",
    "python-multipart>=0.0.27",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
