[project]
name = "smart-delivery-routing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "ortools>=9.15.6755",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "structlog>=25.5.0",
    "supabase>=2.30.0",
    "uvicorn>=0.46.0",
    "watchfiles>=0.19",
    "celery>=5.6.3",
    "redis>=7.4.0",
    "firebase-admin>=7.4.0",
    # OpenTelemetry: bộ SDK chuẩn để tạo và gửi traces
    "opentelemetry-api>=1.33.0",              # API cốt lõi: Tracer, Span, Context
    "opentelemetry-sdk>=1.33.0",              # Implement của API: xử lý và export traces
    "opentelemetry-instrumentation-fastapi>=0.54b0",  # Tự động tạo span cho mỗi HTTP request
    "opentelemetry-instrumentation-httpx>=0.54b0",    # Tự động tạo span cho mỗi HTTP call ra ngoài
    "opentelemetry-exporter-otlp-proto-grpc>=1.33.0", # Gửi traces tới Jaeger qua gRPC
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["integration: tests requiring external services (Supabase, Redis, OSRM)"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "locust>=2.44.4",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
